hphp/test/zend/good/ext/gd/tests/imagefttext.php.skipif
<?php
if (!gd_info()['FreeType Support']) echo 'skip';
