hphp/test/zend/bad/ext/mysql/tests/mysql_mysqlnd_read_timeout_long.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');
require_once('connect.inc');
?>